start move from @material-ui to @mui; story work; misc tidy'n

--- a/story/components.mdx
+++ b/story/components.mdx
@@ -1,32 +1,32 @@
 import Login from './src/auth/Login'
-import WholesaleOrders from './src/dashboard/WholesaleOrders'
-import Members from './src/dashboard/Members'
-import Orders from './src/dashboard/Orders'
+import DashboardWholesaleOrders from './src/dashboard/WholesaleOrders'
+import DashboardMembers from './src/dashboard/Members'
+import DashboardOrders from './src/dashboard/Orders'
 
 import UpdateProducts from './src/products/UpdateProducts'
 import ImportProducts from './src/products/ImportProducts'
 
-# Auth
+# <a name="Auth" /> Auth
 
 ## `<Login />`
 
 <Login />
 
-# Dashboard
+# <a name="Dashboard" /> Dashboard
 
 ## `<WholesaleOrders />`
 
-<WholesaleOrders />
+<DashboardWholesaleOrders />
 
 ## `<Members />`
 
-<Members />
+<DashboardMembers />
 
 ## `<Orders />`
 
-<Orders />
+<DashboardOrders />
 
-# Products
+# <a name="Products" /> Products
 
 ## `<UpdateProducts />`
 
