--- a/story/index.mdx
+++ b/story/index.mdx
@@ -7,6 +7,13 @@ import Components from './story/components.mdx'
 
 [marshlife-art github org](https://github.com/marshlife-art)
 
+# <a name="TOC" /> TOC
+
+- [Dashboard](#Dashboard)
+- [Auth](#Auth)
+- [Dashboard](#Dashboard)
+- [Products](#Products)
+
 ---
 
 <Example />
